added the parts I needed for the login page

--- a/Web Dev YEAR 2/style.css
+++ b/Web Dev YEAR 2/style.css
@@ -180,3 +180,48 @@ nav ul li a {
     padding-top: 50px;
     font-size: 25px;
 }
+
+.block {
+    border-radius: 25px;
+    background: #00986f;
+    padding: 20px; 
+    margin: auto;
+    width: 50%;
+    top: 100px;
+    position: relative;
+  }
+  
+  input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+
+  input[type=password], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  
+  input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
