--- a/webDevYear2/style.css
+++ b/webDevYear2/style.css
@@ -17,6 +17,11 @@ body{
     position: relative;
 }
 
+/* Added flex to student reviews*/
+.studentReviews {
+    display: flex;
+}
+
 nav{
     background-color: #00986f;
     display: flex;
@@ -101,10 +106,7 @@ nav ul li a {
     flex-direction: column;
     padding-top: 75px;
     text-align: center;
-    
-    
-
-  }
+}
 
 
   
